--- a/index.html
+++ b/index.html
@@ -8,41 +8,40 @@
 
   <body>
     <div class="calc-body">
-        <div class="answer"></div>
-        <div class="buttons">
-            <div class="row">
-                <button id="ac">AC</button>
-                <button id="negative">+/-</button>
-                <button id="percent">%</button>
-                <button id="divide" class="operator">./.</button>
-            </div>
-            <div class="row">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button id="multiply">X</button>
-            </div>
-            <div class="row">
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button id="subtract">-</button>
-            </div>
-            <div class="row">
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-                <button id="add">+</button>
-            </div>
-            <div class="row">
-                <button id="zero">0</button>
-                <button id="point">.</button>
-                <button id="equals">=</button>
-            </div>
-            <div class="row">
-
-            </div>
+        <div class="row">
+            <p id="answer">9</p>
         </div>
+        <span class="buttons">
+        <div class="row">
+            <button id="ac">AC</button>
+            <button id="negative">+/-</button>
+            <button id="percent">%</button>
+            <button id="divide" class="operator">./.</button>
+        </div>
+        <div class="row">
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="multiply">X</button>
+        </div>
+        <div class="row">
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="subtract">-</button>
+        </div>
+        <div class="row">
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="add">+</button>
+        </div>
+        <div class="row">
+            <button id="zero">0</button>
+            <button id="point">.</button>
+            <button id="equals">=</button>
+        </div>
+        </span>
     </div>
 
   </body>
