iPhone button coloring

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
         </div>
         <span class="buttons">
         <div class="row">
-            <button id="ac">AC</button>
-            <button id="negative">+/-</button>
-            <button id="percent">%</button>
-            <button id="divide" class="operator">./.</button>
+            <button id="ac" class="light-gray">AC</button>
+            <button id="negative" class="light-gray">+/-</button>
+            <button id="percent" class="light-gray">%</button>
+            <button id="divide" class="orange">./.</button>
         </div>
         <div class="row">
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="nine">9</button>
-            <button id="multiply">X</button>
+            <button id="seven" class="dark-gray">7</button>
+            <button id="eight" class="dark-gray">8</button>
+            <button id="nine" class="dark-gray">9</button>
+            <button id="multiply" class="orange">X</button>
         </div>
         <div class="row">
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="subtract">-</button>
+            <button id="four" class="dark-gray">4</button>
+            <button id="five" class="dark-gray">5</button>
+            <button id="six" class="dark-gray">6</button>
+            <button id="subtract" class="orange">-</button>
         </div>
         <div class="row">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="add">+</button>
+            <button id="one" class="dark-gray">1</button>
+            <button id="two" class="dark-gray">2</button>
+            <button id="three" class="dark-gray">3</button>
+            <button id="add" class="orange">+</button>
         </div>
         <div class="row">
-            <button id="zero">0</button>
-            <button id="point">.</button>
-            <button id="equals">=</button>
+            <button id="zero" class="dark-gray">0</button>
+            <button id="point" class="dark-gray">.</button>
+            <button id="equals" class="orange">=</button>
         </div>
         </span>
     </div>
