Numbers have values, populate in answer when clicked

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <button id="divide" class="orange">./.</button>
         </div>
         <div class="row">
-            <button id="seven" class="dark-gray">7</button>
-            <button id="eight" class="dark-gray">8</button>
-            <button id="nine" class="dark-gray">9</button>
+            <button id="seven" value="7" class="dark-gray">7</button>
+            <button id="eight" value="8" class="dark-gray">8</button>
+            <button id="nine" value="9" class="dark-gray">9</button>
             <button id="multiply" class="orange">X</button>
         </div>
         <div class="row">
-            <button id="four" class="dark-gray">4</button>
-            <button id="five" class="dark-gray">5</button>
-            <button id="six" class="dark-gray">6</button>
+            <button id="four" value="4" class="dark-gray">4</button>
+            <button id="five" value="5" class="dark-gray">5</button>
+            <button id="six" value="6" class="dark-gray">6</button>
             <button id="subtract" class="orange">-</button>
         </div>
         <div class="row">
-            <button id="one" class="dark-gray">1</button>
-            <button id="two" class="dark-gray">2</button>
-            <button id="three" class="dark-gray">3</button>
+            <button id="one" value="1" class="dark-gray">1</button>
+            <button id="two" value="2" class="dark-gray">2</button>
+            <button id="three" value="3" class="dark-gray">3</button>
             <button id="add" class="orange">+</button>
         </div>
         <div class="row">
-            <button id="zero" class="dark-gray">0</button>
+            <button id="zero" value="0" class="dark-gray">0</button>
             <button id="point" class="dark-gray">.</button>
             <button id="equals" class="orange">=</button>
         </div>
