--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             <button id="divide" class="orange">./.</button>
         </div>
         <div class="row">
-            <button id="seven" value="7" class="dark-gray">7</button>
-            <button id="eight" value="8" class="dark-gray">8</button>
-            <button id="nine" value="9" class="dark-gray">9</button>
+            <button id="seven" value="7" class="dark-gray number">7</button>
+            <button id="eight" value="8" class="dark-gray number">8</button>
+            <button id="nine" value="9" class="dark-gray number">9</button>
             <button id="multiply" class="orange">X</button>
         </div>
         <div class="row">
-            <button id="four" value="4" class="dark-gray">4</button>
-            <button id="five" value="5" class="dark-gray">5</button>
-            <button id="six" value="6" class="dark-gray">6</button>
+            <button id="four" value="4" class="dark-gray number">4</button>
+            <button id="five" value="5" class="dark-gray number">5</button>
+            <button id="six" value="6" class="dark-gray number">6</button>
             <button id="subtract" class="orange">-</button>
         </div>
         <div class="row">
-            <button id="one" value="1" class="dark-gray">1</button>
-            <button id="two" value="2" class="dark-gray">2</button>
-            <button id="three" value="3" class="dark-gray">3</button>
+            <button id="one" value="1" class="dark-gray number">1</button>
+            <button id="two" value="2" class="dark-gray number">2</button>
+            <button id="three" value="3" class="dark-gray number">3</button>
             <button id="add" class="orange">+</button>
         </div>
         <div class="row">
