Event listeners for numbers vs operators

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
             <button id="ac" class="light-gray">AC</button>
             <button id="negative" class="light-gray">+/-</button>
             <button id="percent" class="light-gray">%</button>
-            <button id="divide" class="orange">./.</button>
+            <button id="divide" class="operator orange">./.</button>
         </div>
         <div class="row">
             <button id="seven" value="7" class="dark-gray number">7</button>
             <button id="eight" value="8" class="dark-gray number">8</button>
             <button id="nine" value="9" class="dark-gray number">9</button>
-            <button id="multiply" class="orange">X</button>
+            <button id="multiply" class="operator orange">X</button>
         </div>
         <div class="row">
             <button id="four" value="4" class="dark-gray number">4</button>
             <button id="five" value="5" class="dark-gray number">5</button>
             <button id="six" value="6" class="dark-gray number">6</button>
-            <button id="subtract" class="orange">-</button>
+            <button id="subtract" class="operator orange">-</button>
         </div>
         <div class="row">
             <button id="one" value="1" class="dark-gray number">1</button>
             <button id="two" value="2" class="dark-gray number">2</button>
             <button id="three" value="3" class="dark-gray number">3</button>
-            <button id="add" class="orange">+</button>
+            <button id="add" class="operator orange">+</button>
         </div>
         <div class="row">
             <button id="zero" value="0" class="dark-gray">0</button>
             <button id="point" class="dark-gray">.</button>
-            <button id="equals" class="orange">=</button>
+            <button id="equals" class="operator orange">=</button>
         </div>
         </span>
     </div>
