Can't type new valOne with result

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row">
             <button id="zero" value="0" class="dark-gray">0</button>
             <button id="point" class="dark-gray">.</button>
-            <button id="equals" class="operator orange">=</button>
+            <button id="equals" value="" class="operator orange">=</button>
         </div>
         </span>
     </div>
