--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row">
             <button id="zero" value="0" class="dark-gray">0</button>
-            <button id="point" class="dark-gray">.</button>
+            <button id="point" value="." class="dark-gray">.</button>
             <button id="equals" class="orange">=</button>
         </div>
         </span>
