Answer floats right

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="calc-body">
-        <div class="row">
+        <div class="row" id="answer-row">
             <p id="answer"></p>
         </div>
         <span class="buttons">
