change division sign

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id='clearButton' class="light-gray">AC</button>
             <button id="negative" class="light-gray">+/-</button>
             <button id="percent" class="light-gray">%</button>
-            <button id="divide" value="/" class="operator orange">./.</button>
+            <button id="divide" value="/" class="operator orange">÷</button>
         </div>
         <div class="row">
             <button id="seven" value=7 class="dark-gray number">7</button>
