--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="calc">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
-            <div data-previous-operand class="current-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
         <button data-clear class="light">AC</button>
         <button data-operation class="light">-/+</button>
