switch for operation options

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <button data-number class="dark">4</button>
         <button data-number class="dark">5</button>
         <button data-number class="dark">6</button>
-        <button class="orange" style="font-size:50px;">-</button>
+        <button data-operation class="orange" style="font-size:50px;">-</button>
         <button data-number class="dark">1</button>
         <button data-number class="dark">2</button>
         <button data-number class="dark">3</button>
-        <button class="orange">+</button>
+        <button data-operation class="orange">+</button>
         <button data-number class="span-two" class="dark">0</button>
         <button data-number class="dark">.</button>
         <button data-equals class="orange">=</button>
