add sign change functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div data-current-operand class="current-operand"></div>
         </div>
         <button data-clear class="light">AC</button>
-        <button data-operation class="light">-/+</button>
-        <button data-operation class="light">%</button>
+        <button data-sign-change class="light">-/+</button>
+        <button data-percent class="light">%</button>
         <button data-operation class="orange" style="font-size:50px;">÷</button>
         <button data-number class="dark">7</button>
         <button data-number class="dark">8</button>
